--- a/package.json
+++ b/package.json
@@ -4,25 +4,37 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "export SET NODE_OPTIONS=--openssl-legacy-provider && npx hardhat test ./test/mockfork.ts",
+    "node": "export SET NODE_OPTIONS=--openssl-legacy-provider && npx hardhat node --fork https://eth-mainnet.g.alchemy.com/v2/4Xp19JnP1z2aqbbmq92K3c9oMgflSwW_ --fork-block-number 14390000",
+    "uni": "export SET NODE_OPTIONS=--openssl-legacy-provider && npx hardhat run scripts/test.ts",
+    "mockfork": "export SET NODE_OPTIONS=--openssl-legacy-provider && npx hardhat run test/mockfork.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@nomiclabs/hardhat-etherscan": "^3.1.4",
     "@openzeppelin/contracts": "^4.3.2",
+    "@typechain/hardhat": "^6.1.5",
+    "bignumber": "^1.1.0",
     "dotenv": "^16.0.1",
     "eth-hooks": "5.0.2-beta27"
   },
   "devDependencies": {
     "@dethcrypto/eth-sdk": "0.3.3",
+    "@nomicfoundation/hardhat-chai-matchers": "^1.0.5",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.7",
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
+    "@nomiclabs/hardhat-ethers": "^2.2.1",
+    "@nomiclabs/hardhat-etherscan": "^3.1.4",
+    "@types/mocha": "^10.0.1",
     "bn.js": "^5.2.0",
+    "chai": "^4.2.0",
     "eslint": "^8.1.0",
     "hardhat": "^2.12.5",
     "hardhat-deploy": "^0.11.22",
+    "hardhat-gas-reporter": "^1.0.9",
     "prettier": "^2.4.1",
     "prettier-plugin-solidity": "^1.0.0-beta.18",
+    "solidity-coverage": "^0.8.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   }
