--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "npx hardhat test ./test/mockfork.ts",
+    "test": "npx hardhat test ./test/Test-uniswap.ts",
     "node": "export SET NODE_OPTIONS=--openssl-legacy-provider && npx hardhat node --fork https://eth-mainnet.g.alchemy.com/v2/4Xp19JnP1z2aqbbmq92K3c9oMgflSwW_ --fork-block-number 14390000",
     "uni": "export SET NODE_OPTIONS=--openssl-legacy-provider && npx hardhat run scripts/test.ts",
     "mockfork": "export SET NODE_OPTIONS=--openssl-legacy-provider && npx hardhat run test/mockfork.ts"
